custom header for bonus or gold or alphabank

--- a/alpha-newsletters/components/hero-image.html
+++ b/alpha-newsletters/components/hero-image.html
@@ -18,7 +18,7 @@
   }
 </script>
 
-<img
+<img class="mx-auto block"
   src="{{ name }}"
   src-production="images/{{ name }}"
   width="{{ width }}"
