custom header for bonus or gold or alphabank

--- a/alpha-newsletters/components/header.html
+++ b/alpha-newsletters/components/header.html
@@ -19,7 +19,7 @@
           </tr>
         </table>
       </if>
-      <if condition="headerSecondLogo == 'gold' || {{props.headerSecondLogo}} == 'bonus'">
+      <if condition="headerSecondLogo == 'gold' || headerSecondLogo == 'bonus'">
         <table class="w-full sm:table hidden">
           <tr>
             <td>
