--- a/alpha-newsletters/components/button.html
+++ b/alpha-newsletters/components/button.html
@@ -1,74 +1,57 @@
 <script props>
-  // https://maizzle.com/docs/components/button
-  let align = {
-    left: 'text-left',
-    center: 'text-center',
-    right: 'text-right',
-  }[props.align] || ''
+  let styles = []
 
-  let styles = [
-    'display: inline-block;',
-    'text-decoration: none;',
-    'padding: 16px 24px;',
-    'font-size: 16px;',
-    'line-height: 1;',
-    'border-radius: 4px;',
-  ]
-
-  let hasBgClass = () => props.class && props.class.split(' ').some(c => c.startsWith('bg-'))
-
-  if (props['bgColor'] && !hasBgClass()) {
-    styles.push(`background-color: ${props['bgColor']};`)
-  } else {
-    styles.push('background-color: #4338ca;')
+  if (props.width) {
+    styles.push(`width: ${props.width};`)
   }
 
-  if (props.color) {
-    styles.push(`color: ${props.color};`)
-  } else {
-    styles.push('color: #ffffff;')
-  }
-
-  if (props['btnWidth']) {
-    styles.push(`width: ${props.btnWidth};`)
-  } else {
-    styles.push('width: 273px;')
+  if (props.height) {
+    styles.push(`max-height: ${props.height};`)
   }
 
   module.exports = {
-    align,
+    width: props.width,
+    height: props.height,
+    image: props.image,
+    styles: styles.join(' '),
     href: props.href,
-    styles: styles.join(''),
-    msoPt: props['mso-pt'] || '16px',
-    msoPb: props['mso-pb'] || '24px',
+    alt: props.alt || ''
   }
 </script>
 
-<table width="100%" cellpadding="0" cellspacing="0" role="none">
+<table class="w-full">
   <tr>
     <td align="center">
-
-
-  <!--[if mso]>
-
-    <v:rect style="height:48px;width:0;" fill="f" stroke="f" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" />
-
-    <v:roundrect style="width:{{{btnWidth}}};height:55px;position:relative;" arcsize="50%" stroke="f" fill="true" xmlns:v=&quot;urn:schemas-microsoft-com:vml&quot; xmlns:w=&quot;urn:schemas-microsoft-com:office:word&quot;>
-        <v:fill type="gradientradial" color="transparent" color2="{{{bgColor}}}" focus="0" focusposition=".05,0.23" focussize=".9,0.25" />
-    </v:roundrect>
-
-    <v:roundrect href="{{{ href }}}" style="width:{{{btnWidth}}};height:48px;position:relative;v-text-anchor:middle;" arcsize="50%" stroke="f" fillcolor="{{{bgColor}}}" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word">
-        <w:anchorlock/>
-        <v:textbox inset="0,0,0,0">
-        <center>
-    <![endif]-->
-  <a href="{{{ href }}}" style="font-family: Arial, sans-serif;font-size: 16px;margin: 0 auto;padding: 0 36px;color: #ffffff;margin-top: 0;line-height: 48px;background-color:{{bgColor}};border-radius: 5000px;display: inline-block;text-align: center;text-decoration: none;white-space: nowrap;-webkit-text-size-adjust: none">{{{btnText}}}</a>
-  <!--[if mso]>
-  </center>
-  </v:textbox>
-  </v:roundrect>
-  <![endif]-->
-
+      <if condition="utm === 'true'">
+        <a href="{{href}}?utm_source=newsletter&utm_medium=CVDM&utm_campaign={{page.utm}}" class="inline-block" target="_blank">
+          <img class="mx-auto block"
+               src="{{ image }}"
+               src-production="images/{{ image }}"
+               width="{{ btnWidth }}"
+               height="auto"
+               max-width="100%"
+               border="none"
+               max-height="{{ btnHeight }}"
+               style="{{ styles }}"
+               alt="{{ alt }}" />
+        </a>
+      </if>
+      <else>
+        <a href="{{href}}" target="_blank">
+          <img class="mx-auto block"
+               src="{{ image }}"
+               src-production="images/{{ image }}"
+               width="{{ btnWidth }}"
+               height="auto"
+               max-width="100%"
+               border="none"
+               max-height="{{ btnHeight }}"
+               style="{{ styles }}"
+               alt="{{ alt }}" />
+        </a>
+      </else>
     </td>
   </tr>
 </table>
+
+
