rounded corners component

--- a/alpha-newsletters/components/rounded-corners.html
+++ b/alpha-newsletters/components/rounded-corners.html
@@ -13,7 +13,8 @@
 
 
 <if condition="topOrBottom === 'top'">
-  <table align="center" width="100%" class="w-full" style="{{ styles }}">
+  <!--  <table align="center" width="100%" class="w-full" style="{{ styles }}">-->
+  <table align="center" width="100%" class="w-full bg-[{{bgColor}}]">
     <tr>
       <td width="24px" class="w-6 h-6" align="left"><img src="corner-top-left.png" width="24" height="24" class="block"></td>
       <td>&nbsp;</td>
@@ -22,7 +23,8 @@
   </table>
 </if>
 <else>
-  <table align="center" width="100%" class="w-full" style="{{ styles }}">
+  <!--  <table align="center" width="100%" class="w-full" style="{{ styles }}">-->
+  <table align="center" width="100%" class="w-full bg-[{{bgColor}}]">
     <tr>
       <td width="24px" class="w-6 h-6" align="left"><img src="corner-bottom-left.png" width="24" height="24" class="block"></td>
       <td>&nbsp;</td>
