two cols images

--- a/alpha-newsletters/components/hero-image.html
+++ b/alpha-newsletters/components/hero-image.html
@@ -9,6 +9,8 @@
     styles.push(`max-height: ${props.height};`)
   }
 
+  styles.push(`max-width: 100%;`)
+
   module.exports = {
     width: props.width,
     height: props.height,
