fixes for outlook 120dpi

--- a/alpha-newsletters/components/four-cols-images.html
+++ b/alpha-newsletters/components/four-cols-images.html
@@ -29,10 +29,10 @@
 <table class="w-full">
   <tr>
     <td align="center">
-      <table align="left" width="298" class="sm:mb-4 sm:w-[300px] border-none sm:float-none float-left">
+      <table align="left" class="sm:mb-4 sm:w-[300px] border-none sm:float-none float-left" style="width: 298px;">
         <tr>
           <td>
-            <table align="left" width="{{imagesWidth}}" class="border-none float-left">
+            <table align="left" class="border-none float-left" style="width: {{imagesWidth}};">
               <tr>
                 <td align="center">
                   <if condition="firstImageUtm == true">
@@ -48,7 +48,7 @@
                 </td>
               </tr>
             </table>
-            <table align="right" width="{{imagesWidth}}" class="border-none float-right">
+            <table align="right" class="border-none float-right" style="width: {{imagesWidth}};">
               <tbody>
               <tr>
                 <td align="center">
@@ -69,10 +69,10 @@
           </td>
         </tr>
       </table>
-      <table align="right" width="298" class="sm:w-[300px] border-none sm:float-none float-right">
+      <table align="right" class="sm:w-[300px] border-none sm:float-none float-right" style="width: 298px">
         <tr>
           <td>
-            <table align="left" width="{{imagesWidth}}" class="border-none float-left">
+            <table align="left" style="width: {{imagesWidth}};" class="border-none float-left">
               <tr>
                 <td align="center">
                   <if condition="thirdImageUtm == true">
@@ -88,7 +88,7 @@
                 </td>
               </tr>
             </table>
-            <table align="right" width="{{imagesWidth}}" class="border-none float-right">
+            <table align="right" style="width: {{imagesWidth}};" class="border-none float-right">
               <tbody>
               <tr>
                 <td align="center">
