--- a/alpha-newsletters/components/header.html
+++ b/alpha-newsletters/components/header.html
@@ -10,7 +10,7 @@
       <if condition="headerSecondLogo !== 'bonus'">
         <table align="left" width="172" class="sm:w-full border-none sm:float-none float-left">
           <tr>
-            <td align="center" class="pad_bottom" >
+            <td align="center" >
               <x-spacer height="10px" class="sm:hidden"/>
               <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign={{ page.utm }}" target="_blank">
                 <img src="alpha_logo.png" src-production="images/alpha_logo.png" width="172" alt="Alpha Bank" style="width:172px; max-width:100%; max-height: 32px;">
@@ -32,7 +32,7 @@
         <table align="right" width="93" class="sm:w-full border-none sm:float-none float-right">
           <tbody>
           <tr>
-            <td align="center" class="pad_bottom" >
+            <td align="center">
                 <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign={{ page.utm }}" target="_blank">
                   <img src="gold-logo-personal-transparent.png" src-production="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank"  style="width:93px; max-width:100%; max-height: 53px;">
                 </a>
@@ -45,7 +45,7 @@
         <table align="right" width="146" class="sm:w-full border-none sm:float-none float-right">
           <tbody>
           <tr>
-            <td align="center" class="pad_bottom" >
+            <td align="center">
               <a href="https://www.alpha.gr/el/idiotes/bonus?utm_source=newsletter&utm_medium=CVDM&utm_campaign={{ page.utm }}" target="_blank">
                 <img src="bonus-logo.png" src-production="images/bonus-logo.png" width="146" alt="Alpha Bank Bonus" style="width:146px; max-width:100%; max-height: 52px;">
               </a>
