footer / text/ fixes

--- a/alpha-newsletters/components/follow-us.html
+++ b/alpha-newsletters/components/follow-us.html
@@ -5,6 +5,7 @@
     instagramLink: props.instagramLink,
     facebookLink: props.facebookLink,
     youtubeLink: props.youtubeLink,
+    title: props.title,
   }
 </script>
 
@@ -14,7 +15,7 @@
       <table align="left" width="172" class="sm:w-full border-none sm:float-none float-left">
         <tr>
           <td align="center" >
-            <h2 class="text-[18px] leading-[34px] my-0" style="color:{{page.primaryColor}};">Ακολουθήστε μας</h2>
+            <h2 class="text-[18px] leading-[34px] my-0" style="color:{{page.primaryColor}};">{{title}}</h2>
           </td>
         </tr>
       </table>
