--- a/alpha-newsletters/components/rounded-corners.html
+++ b/alpha-newsletters/components/rounded-corners.html
@@ -16,9 +16,9 @@
   <!--  <table align="center" width="100%" class="w-full" style="{{ styles }}">-->
   <table align="center" width="100%" class="w-full bg-[{{bgColor}}]">
     <tr>
-      <td width="24px" class="w-6 h-6" align="left"><img src="corner-top-left.png" width="24" height="24" class="block"></td>
+      <td width="24px" class="w-6 h-6" align="left"><img src="corner-top-left.png" src-production="images/corner-top-left.png" width="24" height="24" class="block"></td>
       <td>&nbsp;</td>
-      <td width="24px" class="w-6 h-6" align="right"><img src="corner-top-right.png" width="24" height="24" class="block"></td>
+      <td width="24px" class="w-6 h-6" align="right"><img src="corner-top-right.png" src-production="images/corner-top-right.png" width="24" height="24" class="block"></td>
     </tr>
   </table>
 </if>
@@ -26,9 +26,9 @@
   <!--  <table align="center" width="100%" class="w-full" style="{{ styles }}">-->
   <table align="center" width="100%" class="w-full bg-[{{bgColor}}]">
     <tr>
-      <td width="24px" class="w-6 h-6" align="left"><img src="corner-bottom-left.png" width="24" height="24" class="block"></td>
+      <td width="24px" class="w-6 h-6" align="left"><img src="corner-bottom-left.png" src-production="images/corner-bottom-left.png" width="24" height="24" class="block"></td>
       <td>&nbsp;</td>
-      <td width="24px" class="w-6 h-6" align="right"><img src="corner-bottom-right.png" width="24" height="24" class="block"></td>
+      <td width="24px" class="w-6 h-6" align="right"><img src="corner-bottom-right.png" src-production="images/corner-bottom-right.png" width="24" height="24" class="block"></td>
     </tr>
   </table>
 </else>
