--- a/alpha-newsletters/components/icon-text.html
+++ b/alpha-newsletters/components/icon-text.html
@@ -35,7 +35,7 @@
     <if condition="spaceX">
       <td width="{{spaceX}}"></td>
     </if>
-    <td align="center" width="{{width}}">
+    <td align="center" width="{{iconWidth}}">
       <img class="mx-auto block"
            src="{{ image }}"
            src-production="images/{{ image }}"
